# AI-Voice

./: .gitignore  README.md  config.py  jarvis.V2.py  jarvis.py  pyproject.toml
.github/workflows/: pylint.yml  python-publish.yml
